--- a/CAPPSw.html
+++ b/CAPPSw.html
@@ -10,13 +10,14 @@
 </head>
 
 <body background="tlo.jpg">
+
 <table border="8" bordercolor="white" height="100%" width="100%" >
 
 <tr>
 <td align="center" valign="center" rowspan="2" width="20%" height="100%">
 <fieldset>
 <legend>Przemysław Płóciennik</legend>
-<img width="200" height="250" src="photo.gif" alt="Zdjęcie" border="1" bordercolor="grey" >
+<img width="200" height="250" src="photo2.gif" alt="Zdjęcie" border="1" bordercolor="grey" >
 <br>
 Student informatyki<br>Uniwersytetu im. Adama Mickiewicza<br>w Poznaniu<br><br>Portfolio --->
 <br><br>
