--- a/CAPPSc.html
+++ b/CAPPSc.html
@@ -17,7 +17,7 @@
 <td align="center" valign="center" rowspan="2" width="20%" height="100%">
 <fieldset>
 <legend>Przemys³aw P³óciennik</legend>
-<img width="200" height="250" src="photo.gif" alt="Zdjêcie" border="1" bordercolor="grey" >
+<img width="200" height="250" src="photo2.gif" alt="Zdjêcie" border="1" bordercolor="grey" >
 <br>
 Student informatyki<br>Uniwersytetu im. Adama Mickiewicza<br>w Poznaniu<br><br>Portfolio --->
 <br><br>
