Do not show page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="author" content="Przemysław Płóciennik">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Przemysław Płóciennik</title>
-</head>
+</head><body>Work in progress...
 
-<body background="tlo.jpg">
+<!--<body background="tlo.jpg">
 
 <table border="8" bordercolor="white" height="100%" width="100%" >
 
@@ -19,7 +19,7 @@
 <legend>Przemysław Płóciennik</legend>
 <img width="200" height="250" src="photo2.gif" alt="Zdjęcie" border="1" bordercolor="grey" >
 <br>
-Student informatyki<br>Uniwersytetu im. Adama Mickiewicza<br>w Poznaniu<br><br>Portfolio --->
+Student informatyki<br>Uniwersytetu im. Adama Mickiewicza<br>w Poznaniu<br><br>Portfolio 
 <br><br>
 <a href="http://google.pl/">Curriculum Vitae</a></fieldset>
 <br><br><br>
@@ -42,5 +42,5 @@ Student informatyki<br>Uniwersytetu im. Adama Mickiewicza<br>w Poznaniu<br><br>P
 
 </table>
 
-</body>
+</body> --->
 </html>
