Added PL CV HyperLink

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <meta name="author" content="Przemysław Płóciennik">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Przemysław Płóciennik</title>
-</head><body>Work in progress...
+</head><body>Work in progress..
+
+<br><br><br>
+<a href="CV.pdf">Curriculum Vitae</a>
 
 <!--<body background="tlo.jpg">
 
