--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head><body>Work in progress..
 
 <br><br><br>
-<a href="CV.pdf">Curriculum Vitae</a>
+<a href="CV.pdf">Curriculum Vitae (Polish)</a>
 
 <!--<body background="tlo.jpg">
 
