Added under_construction image

--- a/index.html
+++ b/index.html
@@ -7,43 +7,21 @@
 <meta name="author" content="Przemysław Płóciennik">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Przemysław Płóciennik</title>
-</head><body>Work in progress..
+</head>
 
-<br><br><br>
-<a href="CV.pdf">Curriculum Vitae (Polish)</a>
-
-<!--<body background="tlo.jpg">
-
-<table border="8" bordercolor="white" height="100%" width="100%" >
-
-<tr>
-<td align="center" valign="center" rowspan="2" width="20%" height="100%">
-<fieldset>
-<legend>Przemysław Płóciennik</legend>
-<img width="200" height="250" src="photo2.gif" alt="Zdjęcie" border="1" bordercolor="grey" >
+<body>
+<font face="Courier New" size="7" color="gray">Whoops! I'm sorry...</font>
 <br>
-Student informatyki<br>Uniwersytetu im. Adama Mickiewicza<br>w Poznaniu<br><br>Portfolio 
+<center><img height="300px" width="700px" src="under_construction.jpg" alt="website_being_built"></img></center>
+
 <br><br>
-<a href="http://google.pl/">Curriculum Vitae</a></fieldset>
-<br><br><br>
-<a href="http://amu.edu.pl/">Strona Uniwersytetu</a>
-</td>
-<td width="80%" height="50%" align="center" valign="center"><a href="CAPPSc.html">Aplikacje w C++ (konsola Windows)</a>
-<br><br>
-<a href="CAPPSw.html">Aplikacje w C++ (okno)</a>
-</td>
-</tr>
 
-<tr>
-<td width="80%" height="50%" align="center" valign="center"><a href="http://google.pl/">Aplikacje w Java (konsola Windows)</a>
-<br><br>
-<a href="http://google.pl/">Aplikacje w Java (okno)</a>
-</td>
-</tr>
+<fieldset align="center">
+Meanwhile check out my <a href="CV.pdf">Curriculum Vitae (Polish)</a>
+</fieldset>
 
 
 
-</table>
 
-</body> --->
+</body> 
 </html>
