--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br><br>
 
 <fieldset align="center">
-Meanwhile check out my <a href="CV.pdf">Curriculum Vitae (Polish)</a>
+<center><font face="Courier New">In the meantime check my <a href="CV.pdf">Curriculum Vitae (Polish)</a></font></center>
 </fieldset>
 
 
