--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <br><br>
 
 <fieldset align="center">
-<center><font face="Courier New">In the meantime check my <a href="pl/CV.pdf">Curriculum Vitae (Polish)</a></font></center>
+<center><font face="Courier New">In the meantime check my <a href="pl/CV-pl.pdf">Curriculum Vitae (Polish)</a></font></center>
 </fieldset>
 
 
